--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
   margin: 0px;
+  box-sizing: border-box;
+  height: 100%;
 }
 
 .navbar-container {
   background-color: #f0f0f0;
-  position: absolute;
   width: 100%;
   height: 70px;
   left: 0px;
@@ -19,28 +20,86 @@ body {
   width: 230px;
   height: 36px;
 }
-.navbar-icons-container{
-    /* display: flex; */
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 80px 20px 0px;
+.navbar-icons-container {
+  /* display: flex; */
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 80px 20px 0px;
+}
+.navbar-icons {
+  border-radius: 50px;
+  margin-right: 15px;
+  height: 30px;
+  width: 30px;
+  background-color: #3683f0;
+  border: 0;
+}
+.profile-pic {
+  /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzHQv_th9wq3ivQ1CVk7UZRxhbPq64oQrg5Q&usqp=CAU); */
+}
+.icons-img {
+  /* width: 24px; */
+}
+.navbar-menu {
+  background-color: #f0f0f0;
+}
 
+.content.container{
+  width: 100%;
+  height: auto
 }
-.navbar-icons{
-    border-radius: 50px;
-    margin-right: 15px;
-    height: 30px;
-    width: 30px;
-    background-color: #3683F0;
-    border: 0;
+
+.asset-container{
+  height: 900px;
+  margin-top: 2rem;
+  margin-left: 15%;
+  width: 75%;
+  /* background-color: red; */
+ 
 }
-.profile-pic{
-    /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzHQv_th9wq3ivQ1CVk7UZRxhbPq64oQrg5Q&usqp=CAU); */
+
+.asset-container-heading{
+  background-color: blue;
+  height: 25;
+  margin-top: 1px;
+  border-radius: 4px;
 }
-.icons-img{
-    /* width: 24px; */
+.asset-container-heading h3{
+  padding: 0.7rem;
+  color: white;
+  margin: 0px;
+}.asset-container-content{
+  height: 900px;
+  border: 1px solid #F0F0F0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
-.navbar-menu{
-    background-color: #F0F0F0;
+
+.task-container{
+  margin-top: 25px;
+  width: 40%;
+  height: 100px;
+ 
 }
+.task-container-heading{
+  width: 100%;
+  color: white;
+  background-color: black;
+  margin: 0px;
+  border-radius: 4px;
+}
+.task-container-heading h3{
+  margin: 0px;
+}
+.task-container-content{
+  height: 100px;
+  /* background-color: #3683f0; */
+  border: 1px solid #F0F0F0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+
