--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .asset-container{
-  height: 900px;
+  height: 1300px;
   margin-top: 2rem;
   margin-left: 15%;
   width: 75%;
@@ -70,7 +70,7 @@ body {
   color: white;
   margin: 0px;
 }.asset-container-content{
-  height: 900px;
+  height: 1600px;
   border: 1px solid #F0F0F0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
@@ -96,7 +96,7 @@ body {
   margin: 0px;
 }
 .task-container-content{
-  height: 100px;
+  /* height: ; */
   /* background-color: #3683f0; */
   border: 1px solid #F0F0F0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
