--- a/style.css
+++ b/style.css
@@ -101,5 +101,32 @@ body {
   border: 1px solid #F0F0F0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+textarea{
+  border-radius: 4px;
+  resize: none;
 
+}
+.form-1{
+  /* display: flex; */
+}
+.sub-thread-container{
+  background-color: grey;
+  width: 35%;
+  display: inline-block;
+  margin-left: 3rem;
+  
+}
+.sub-thread-container textarea{
+  width: 97%;
+  border-radius: 10px;
+}
+.sub-thread-container h5{
+  margin: 2px;
+}
+.subthread-button{
+  background-color: blue;
+  color: white;
+  display: block;
+  margin: 10px;
+}
 
